# Tanzquotient-Playlist-Printer

./: .gitignore  LICENSE  README.md
.github/workflows/: compile.yml
src/: main.typ
src/scripts/: open-dancing-playlist.csv  pyproject.toml  sample-credentials.toml  sample-notes.md  spotify-to-csv.py
